<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/my_orders_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/my_orders_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_logout_button"
        android:text="@string/exit_button"
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_orders_fragment_title" />

    <carbon.widget.EditText
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_corner"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search_button"
        android:textColorHint="@color/greyMiddle"
        app:carbon_elevation="12dp"
        app:carbon_elevationShadowColor="#68a3e2"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/my_orders_fragment_title"
        app:layout_constraintTop_toBottomOf="@+id/my_orders_fragment_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/static_sort_part"
        android:textColor="@color/blueLight"
        android:textSize="@dimen/description"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@drawable/ic_filter_list_black_18dp"
        android:fontFamily="sans-serif"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/sort_button_title"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textColor="@color/blueDark"
        android:textSize="@dimen/description"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_sort_name"
        android:textColor="@color/blueDark"
        android:textSize="@dimen/description"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <android.support.v4.widget.SwipeRefreshLayout
	    android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_orders_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</carbon.widget.ConstraintLayout>